<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_below="@+id/classified"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="2dp"
        android:drawableLeft="@drawable/ic_baseline_photo_camera_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/lexend"
        android:text="@string/take_picture"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="91dp"
        android:fontFamily="@font/lexend"
        android:text="@string/launch_gallery"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="370sp"
        android:layout_height="370sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:id="@+id/classified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/lexend"
        android:text="@string/classified_as"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="#C30000"
        android:textStyle="bold"
        android:textSize="27sp"
        android:id="@+id/result"
        android:layout_below="@+id/classified"
        />

</RelativeLayout>