<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_ack"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180sp"
        android:layout_marginHorizontal="25dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/sec_border"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lexend"
                android:text="@string/welcome_to_bhumi"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <View
                android:layout_width="216dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:background="@color/Scarlet" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="127dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lexend"
                android:justificationMode="inter_word"
                android:padding="3dp"
                android:text="@string/welcome_paragraph"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:targetApi="o" />

            <Button
                android:id="@+id/capture"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/baseline_camera_24"
                android:text="@string/start_capture_3"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>